--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ locket==0.2.0
 MarkupSafe==1.0
 matplotlib==2.2.3
 mistune==0.8.3
-mkl-fft==1.0.11
+mkl_fft==1.0.11
 mkl-random==1.0.2
 msgpack==0.5.6
 nbconvert==5.3.1
