--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cffi==1.11.5
 chardet==3.0.4
 click==6.7
 cloudpickle==0.5.3
+conda==4.6.8
 constantly==15.1.0
 cryptography==2.6.1
 cryptography-vectors==2.3.1
@@ -24,10 +25,13 @@ entrypoints==0.2.3
 heapdict==1.0.0
 html5lib==1.0.1
 hyperlink==18.0.0
+icc-rt==2019.0
 idna==2.7
 imageio==2.3.0
 imutils==0.4.6
 incremental==17.5.0
+intel-numpy==1.15.1
+intel-openmp==2019.0
 ipykernel==4.8.2
 ipython==6.5.0
 ipython-genutils==0.2.0
@@ -43,7 +47,8 @@ locket==0.2.0
 MarkupSafe==1.0
 matplotlib==2.2.3
 mistune==0.8.3
-mkl_fft==1.0.11
+mkl==2019.0
+mkl-fft==1.0.6
 mkl-random==1.0.2
 msgpack==0.5.6
 nbconvert==5.3.1
@@ -93,6 +98,8 @@ service-identity==17.0.0
 simplegeneric==0.8.1
 six==1.11.0
 sortedcontainers==2.0.4
+tbb==2019.0
+tbb4py==2019.0
 tblib==1.3.2
 terminado==0.8.1
 testpath==0.3.1
