--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ msgpack==0.5.6
 nbconvert==5.3.1
 nbformat==4.4.0
 networkx==2.1
-notebook==5.7.7
+notebook
 numpy==1.15.0
 olefile==0.45.1
 opencv-contrib-python==3.4.2.17
