--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,22 @@
-anytree==2.4.3
-appdirs==1.4.3
-appnope==0.1.0
-asn1crypto==0.24.0
-attrs==18.1.0
-Automat==0.7.0
-backcall==0.1.0
-bleach==2.1.4
-bokeh==0.13.0
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
-cloudpickle==0.5.3
-constantly==15.1.0
-cryptography==2.3.1
-cryptography-vectors==2.3.1
-cycler==0.10.0
-cytoolz==0.9.0.1
-dask==0.18.2
-decorator==4.3.0
-distributed==1.22.1
-entrypoints==0.2.3
-heapdict==1.0.0
-html5lib==1.0.1
-hyperlink==18.0.0
-idna==2.7
-imageio==2.3.0
-imutils==0.4.6
-incremental==17.5.0
-ipykernel==4.8.2
-ipython==6.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.0
-jedi==0.12.1
-Jinja2
-jsonschema==2.6.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
-locket==0.2.0
-MarkupSafe==1.0
-matplotlib==2.2.3
-mistune==0.8.3
-msgpack==0.5.6
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.1
+anytree
+imageio
+imutils
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+jupyter-client
+jupyter-console
+jupyter-core
+matplotlib
+nbconvert
+nbformat
 notebook
-numpy==1.15.0
-olefile==0.45.1
+numpy
 opencv-contrib-python==3.4.2.17
-packaging==17.1
-pandas==0.23.4
-pandocfilters==1.4.2
-parso==0.3.1
-partd==0.3.8
-pexpect==4.6.0
-pickleshare==0.7.4
-Pillow==5.2.0
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
-psutil==5.4.7
-ptyprocess==0.6.0
-pyasn1==0.4.4
-pyasn1-modules==0.2.2
-pycosat==0.6.3
-pycparser==2.18
-Pygments==2.2.0
-PyHamcrest==1.9.0
-pyOpenSSL==18.0.0
-pyparsing==2.2.0
-PySocks==1.6.8
-python-dateutil==2.7.3
-pytz==2018.5
-PyWavelets==0.5.2
-pyzmq==17.1.2
-qtconsole==4.4.0
-regex==2018.7.11
-regexp==0.1
-requests==2.21.0
-ruamel.yaml==0.15.58
-scikit-image==0.14.0
-scikit-learn==0.19.2
-scipy==1.1.0
-Send2Trash==1.5.0
-service-identity==17.0.0
-simplegeneric==0.8.1
-six==1.11.0
-sortedcontainers==2.0.4
-tblib==1.3.2
-terminado==0.8.1
-testpath==0.3.1
-toolz==0.9.0
-tornado==5.1
-tqdm==4.24.0
-traitlets==4.3.2
-Twisted==18.7.0
-urllib3==1.23
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.0
-zict==0.1.3
-zope.interface==4.5.0
+Pillow
+PyWavelets
+qtconsole
+scikit-image
+scikit-learn
+scipy
